# ga-final

./: .gitignore  GameArch Final Project.pptx  README.md
data/models/: Fox.dae  bendybar.fbx  bendybar2.fbx  bendybar_animated.fbx  couch.fbx  couch.mtl  cube.fbx  cube_transforms.fbx  foo.fbx  human.dae  makehuman_sample.mtl  sock.fbx  torus.mtl
data/shaders/: ga_animated_frag.glsl  ga_animated_vert.glsl  ga_constant_color_vert.glsl  ga_lit_frag.glsl  ga_lit_texture_frag.glsl  ga_lit_texture_vert.glsl  ga_lit_vert.glsl  ga_pbr_frag.glsl  ga_pbr_vert.glsl  ga_unlit_texture_frag.glsl  ga_unlit_texture_vert.glsl  shadertoy.glsl
src/engine/: CMakeLists.txt  main.cpp
src/engine/entity/: ga_entity.cpp  ga_entity.h
src/engine/framework/: ga_camera.cpp  ga_camera.h  ga_frame_params.h  ga_input.cpp  ga_output.cpp  ga_output.h
src/engine/graphics/: ga_animation.cpp  ga_animation.h  ga_cube_component.cpp  ga_cube_component.h  ga_material.cpp  ga_material.h  ga_mesh.cpp  ga_mesh.h  ga_model_component.cpp  ga_model_component.h  ga_node.cpp  ga_node.h  ga_program.cpp  ga_program.h  ga_skeleton.h  ga_texture.cpp
src/engine/gui/: ga_button.cpp  ga_checkbox.cpp  ga_font.cpp  ga_font.h  ga_label.cpp  ga_widget.cpp  ga_widget.h
src/engine/math/: ga_mat4f.cpp  ga_mat4f.h  ga_math.h  ga_quatf.h  ga_vec3f.h  ga_vec4f.cpp  ga_vecnf.h
